syntax = "proto3";

option csharp_namespace = "GrpcDeadlineTimeout";

package chat;

message BIChatMessage {
  string user = 1;
  string message = 2;
  int64 timestamp = 3;
}

service BIChatService {
  rpc Chat(stream BIChatMessage) returns (stream BIChatMessage);
}
